src/objects/PIISitespageSettings__c.object
<CustomObject>
    <description>This object stores the selection made by the agent. It auto-generates a URL.</description>
    <fields>
        <fullName>Case_Id__c</fullName>
        <label>Case Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPR_UID__c</fullName>
        <description>Unique ID for the Case Product supporting DPR</description>
        <inlineHelpText>Unique ID for the Case Product supporting DPR</inlineHelpText>
        <label>DPR UID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fields__c</fullName>
        <inlineHelpText>Selected fields will be visible to consumer</inlineHelpText>
        <label>Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FirstName</fullName>
                </value>
                <value>
                    <fullName>LastName</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>AddressLine1</fullName>
                </value>
                <value>
                    <fullName>AddressLine2</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Postal/ZipCode</fullName>
                </value>
                <value>
                    <fullName>Telephone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_DPR_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked will include any digital photo request forms in the PII form</description>
        <inlineHelpText>If checked will include any digital photo request forms in the PII form</inlineHelpText>
        <label>Include DPR Form?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PII_URL__c</fullName>
        <formula>$Setup.Global_Org_Settings__c.Base_Site_URL__c +&apos;PII?sid=&apos;+ Site_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PII URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Id__c</fullName>
        <label>Site Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PIISitespageSettings</label>
    <nameField>
        <displayFormat>PII-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PIISitespageSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>